--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="se">
 
 <head>
   <meta charset="UTF-8">
@@ -98,9 +98,9 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <main class="wrapper">
     <div class="box">
-      <img class="code" src="images/image-qr-code.png">
+      <img class="code" alt="QR-Badge" src="images/image-qr-code.png">
       <div class="text">
         <p class="heading">
           Improve your front-end skills by building projects
@@ -110,7 +110,7 @@
         </span>
       </div>
     </div>
-  </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Kristian Väisänen</a>.
