--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       width: 19rem;
       margin: auto;
       padding: 0.75rem;
-      filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 12%));
+      filter: drop-shadow(0 0 1rem rgba(0, 0, 0, 10%));
     }
 
     .code {
@@ -76,6 +76,7 @@
     }
 
     .heading {
+      font-size: 1.3rem;
       display: block;
       color: var(--color3);
       text-align: center;
